syntax = "proto3";

package blog.blog;

option go_package = "blog/x/blog/types";

message FollowAddressList {
  repeated string list = 1;
}